[gd_scene load_steps=3 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://lobby/waiting_room.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 343.0
margin_top = 217.0
margin_right = 681.0
margin_bottom = 383.0
custom_constants/separation = 15

[node name="lbl_label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 338.0
margin_bottom = 14.0
text = "Lobby"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 338.0
margin_bottom = 131.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="lbl_name" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Name:"

[node name="txt_name" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 88.0
margin_right = 338.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
text = "Enter Name"
align = 1

[node name="lbl_ip_address" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 44.0
margin_right = 73.0
margin_bottom = 58.0
text = "IP Address:"

[node name="txt_ip_address" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 88.0
margin_top = 39.0
margin_right = 338.0
margin_bottom = 63.0
rect_min_size = Vector2( 250, 0 )
text = "Enter IP Address"
align = 1

[node name="lbl_port" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 73.0
margin_bottom = 97.0
text = "Port:"

[node name="txt_port" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 88.0
margin_top = 78.0
margin_right = 338.0
margin_bottom = 102.0
rect_min_size = Vector2( 250, 0 )
text = "Port"
align = 1

[node name="btn_join" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 338.0
margin_bottom = 166.0
text = "Join Game"

[node name="waiting_room" parent="." instance=ExtResource( 2 )]

[node name="VBoxContainer" parent="waiting_room/CenterContainer" index="0"]
margin_top = 268.0
margin_bottom = 332.0

[node name="itml_users" parent="waiting_room/CenterContainer/VBoxContainer" index="1"]
items = [ "Player 1", null, false, "Player 2", null, false, "Player 3", null, false, "Player 4", null, false ]

[connection signal="text_changed" from="CenterContainer/VBoxContainer/GridContainer/txt_name" to="." method="_on_txt_name_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_join" to="." method="_on_btn_join_pressed"]
[connection signal="pressed" from="waiting_room/CenterContainer/VBoxContainer/btn_ready" to="." method="_on_btn_ready_pressed"]

[editable path="waiting_room"]
